--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/question-answer.css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny|Raleway" rel="stylesheet">
 
     {{content-for "head-footer"}}
   </head>
